[gd_scene load_steps=17 format=2]

[ext_resource path="res://skeleton_controls/FollowBone.tscn" type="PackedScene" id=1]
[ext_resource path="res://mesh/bakugo/Bakugo.glb" type="PackedScene" id=2]
[ext_resource path="res://characters/PenisTypeA.tscn" type="PackedScene" id=3]
[ext_resource path="res://mesh/bakugo/Genitals.material" type="Material" id=4]
[ext_resource path="res://characters/Character.gd" type="Script" id=5]
[ext_resource path="res://mesh_controls/MaterialSwitch.gd" type="Script" id=6]
[ext_resource path="res://characters/AnimationTree.tres" type="AnimationNodeBlendTree" id=7]
[ext_resource path="res://animation_tree_controllers/AnimationTreeBlendController.tscn" type="PackedScene" id=8]
[ext_resource path="res://animation_tree_controllers/AnimationTreeStateMachineController.tscn" type="PackedScene" id=9]
[ext_resource path="res://animation_tree_controllers/AnimationTreeControllerTimeScale.tscn" type="PackedScene" id=10]
[ext_resource path="res://mesh_controls/MeshSetManager.gd" type="Script" id=11]
[ext_resource path="res://mesh/bakugo/FaceMask.material" type="Material" id=12]
[ext_resource path="res://mesh/bakugo/Face.material" type="Material" id=13]
[ext_resource path="res://mesh_controls/MeshSet.gd" type="Script" id=14]
[ext_resource path="res://animation_tree_controllers/AnimationTreeBlendControllerTimer.tscn" type="PackedScene" id=15]

[sub_resource type="AnimationNodeStateMachinePlayback" id=1]

[node name="KatsukiBakugo" instance=ExtResource( 2 )]
script = ExtResource( 5 )
nude_expression = "angry"
expressions = {
"angry": 15
}
penis = NodePath("katsuki bakugoqc_skeleton/Skeleton/PenisBoneAttachment/PenisTypeA")

[node name="katsuki bakugoqc_skeleton" parent="." index="0"]
transform = Transform( 0.52, 0, 0, 0, 0.52, 0, 0, 0, 0.52, 0, 0.35, 0 )

[node name="Arms" parent="katsuki bakugoqc_skeleton/Skeleton" index="0" groups=[
"Arms",
]]

[node name="BodyNaked" parent="katsuki bakugoqc_skeleton/Skeleton" index="1" groups=[
"Body",
]]
visible = false

[node name="BodyPants" parent="katsuki bakugoqc_skeleton/Skeleton" index="2" groups=[
"Body",
]]
visible = false
script = ExtResource( 14 )
mesh_name = "Hero Pants"
default_mesh_path = NodePath("../BodyNaked")
has_penis = false

[node name="BodyPantsDownUA" parent="katsuki bakugoqc_skeleton/Skeleton" index="3" groups=[
"Body",
]]
visible = false
script = ExtResource( 14 )
mesh_name = "UA Pants Down"
default_mesh_path = NodePath("../BodyNaked")

[node name="BodyPantsUA" parent="katsuki bakugoqc_skeleton/Skeleton" index="4" groups=[
"Body",
]]
script = ExtResource( 14 )
mesh_name = "UA Pants"
default_mesh_path = NodePath("../BodyNaked")
has_penis = false

[node name="BodyPantsUnzip" parent="katsuki bakugoqc_skeleton/Skeleton" index="5" groups=[
"Body",
]]
visible = false
script = ExtResource( 14 )
mesh_name = "Hero Pants Unzip"
default_mesh_path = NodePath("../BodyNaked")

[node name="Gloves" parent="katsuki bakugoqc_skeleton/Skeleton" index="6" groups=[
"Arms",
]]
visible = false
script = ExtResource( 14 )
mesh_name = "Hero Gloves"
default_mesh_path = NodePath("../Arms")

[node name="GrenadeGauntlets" parent="katsuki bakugoqc_skeleton/Skeleton" index="7"]
visible = false
script = ExtResource( 14 )
mesh_name = "Granade Gauntlets"

[node name="HeadPiece" parent="katsuki bakugoqc_skeleton/Skeleton" index="8"]
visible = false
script = ExtResource( 14 )
mesh_name = "Head Piece"

[node name="NeckPiece" parent="katsuki bakugoqc_skeleton/Skeleton" index="9"]
visible = false
script = ExtResource( 14 )
mesh_name = "Neck Piece"

[node name="Shirt" parent="katsuki bakugoqc_skeleton/Skeleton" index="10" groups=[
"Shirt",
]]
visible = false
script = ExtResource( 14 )
mesh_name = "Hero Shirt"

[node name="ShirtUA" parent="katsuki bakugoqc_skeleton/Skeleton" index="11" groups=[
"Shirt",
]]
script = ExtResource( 14 )
mesh_name = "UA Shirt"

[node name="FaceMask" type="Spatial" parent="katsuki bakugoqc_skeleton/Skeleton" index="12"]
visible = false
script = ExtResource( 6 )
mesh_name = "Face Mask"
show_material = ExtResource( 12 )
hide_material = ExtResource( 13 )
mesh_path = [ NodePath("../BodyNaked"), NodePath("../BodyPants"), NodePath("../BodyPantsDownUA"), NodePath("../BodyPantsUA"), NodePath("../BodyPantsUnzip") ]

[node name="PenisBoneAttachment" type="BoneAttachment" parent="katsuki bakugoqc_skeleton/Skeleton" index="13"]
transform = Transform( -1, 1.25567e-06, 3.25839e-07, 3.2584e-07, 2.98023e-07, 1, 1.25567e-06, 1, -4.17233e-07, 3.64484e-06, 33.298, 2.23377 )
bone_name = "Dick base"

[node name="PenisTypeA" parent="katsuki bakugoqc_skeleton/Skeleton/PenisBoneAttachment" index="0" instance=ExtResource( 3 )]
transform = Transform( -1.92307, 6.26614e-07, 2.41447e-06, 2.41446e-06, 8.0237e-07, 1.92308, 6.26613e-07, 1.92308, -5.73124e-07, -1.00299e-08, 0.14436, -0.479637 )
material = ExtResource( 4 )
soft_scale = Vector3( 0.4, 0.4, 0.4 )
hard_stiffness = 2.3
soft_stiffness = 0.1

[node name="AnimationTree" type="AnimationTree" parent="." index="2"]
tree_root = ExtResource( 7 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/blink_blend/blend_amount = 0.0
parameters/expression_blend/blend_amount = 0.0
parameters/expression_state_machine/playback = SubResource( 1 )
parameters/thrust_blend/blend_amount = 0.0
parameters/thrust_time_scale/scale = 1.0

[node name="AnimationTreeControllers" type="Node" parent="." index="3"]

[node name="BlinkController" parent="AnimationTreeControllers" index="0" instance=ExtResource( 8 )]
animation_tree = NodePath("../../AnimationTree")
param = "blink_blend"
speed = 5.0

[node name="BlendControllerTimer" parent="AnimationTreeControllers/BlinkController" index="0" instance=ExtResource( 15 )]

[node name="TrustController" parent="AnimationTreeControllers" index="1" instance=ExtResource( 8 )]
animation_tree = NodePath("../../AnimationTree")
param = "thrust_blend"
speed = 2.0

[node name="TimescaleController" parent="AnimationTreeControllers/TrustController" index="0" instance=ExtResource( 10 )]
animation_tree = NodePath("../../../AnimationTree")
param = "thrust_time_scale"

[node name="ExpressionController" parent="AnimationTreeControllers" index="2" instance=ExtResource( 9 )]
state_machine = "expression_state_machine"
animation_tree = NodePath("../../AnimationTree")

[node name="BlendController" parent="AnimationTreeControllers/ExpressionController" index="0" instance=ExtResource( 8 )]
animation_tree = NodePath("../../../AnimationTree")
param = "expression_blend"
speed = 2.0

[node name="HeadFollowBone" parent="." index="4" instance=ExtResource( 1 )]
skeleton = NodePath("../katsuki bakugoqc_skeleton/Skeleton")
group_name = "HeadTarget"
bone_name = "bip_head"
angle_limit = 0.5
bone_forward_local = Vector3( 0, 1, 0 )

[node name="NeckFollowBone" parent="." index="5" instance=ExtResource( 1 )]
skeleton = NodePath("../katsuki bakugoqc_skeleton/Skeleton")
group_name = "NeckTarget"
bone_name = "bip_neck"
angle_limit = 0.5
target_offset = Vector3( 0, -5, 0 )
bone_forward_local = Vector3( 0, 0, 1 )

[node name="MeshManager" type="Node" parent="." index="6"]
script = ExtResource( 11 )
mesh_path = [ NodePath("../katsuki bakugoqc_skeleton/Skeleton/HeadPiece"), NodePath("../katsuki bakugoqc_skeleton/Skeleton/FaceMask"), NodePath("../katsuki bakugoqc_skeleton/Skeleton/NeckPiece"), NodePath("../katsuki bakugoqc_skeleton/Skeleton/Gloves"), NodePath("../katsuki bakugoqc_skeleton/Skeleton/GrenadeGauntlets"), NodePath("../katsuki bakugoqc_skeleton/Skeleton/Shirt"), NodePath("../katsuki bakugoqc_skeleton/Skeleton/BodyPants"), NodePath("../katsuki bakugoqc_skeleton/Skeleton/BodyPantsUnzip"), NodePath("../katsuki bakugoqc_skeleton/Skeleton/ShirtUA"), NodePath("../katsuki bakugoqc_skeleton/Skeleton/BodyPantsUA"), NodePath("../katsuki bakugoqc_skeleton/Skeleton/BodyPantsDownUA") ]
penis = NodePath("../katsuki bakugoqc_skeleton/Skeleton/PenisBoneAttachment/PenisTypeA")
